# fedora-care-cli

./: .gitignore  LICENSE  README.md  fedora-care-cli.spec  pyproject.toml
fedcare/: main.py  main.py.save
