[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fedora-care-cli"
version = "1.0.0"
description = "Fedora Linux bakım ve sistem izleme aracı"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
fedcare = "fedcare.main:cli"
